Add custom supervisor strategy

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 akka {
   loglevel = DEBUG
   actor {
+    guardian-supervisor-strategy = "org.kolokolov.plane.PlaneSupervisorStrategyConfigurator"
+//    guardian-supervisor-strategy = "akka.actor.StoppingSupervisorStrategy"
     debug {
       lifecycle = on
     }
